# waybar-extensions-rs

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/lib/: config.rs  lib.rs  waybar.rs
src/lib/weather/: current.rs
