[package]
name = "waybar-extensions-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "waybar_extensions"
path = "src/lib/lib.rs"

[dependencies]
serde={ version = "1.0", features = ["derive"] }
serde_json="1.0"
reqwest={ version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
systemctl = "0.3.1"
chrono = "0.4"
toml = "0.8"
xdg = "2.5"
futures = "0.3"
notify-rust = "4.10"
git2 = "0.17"
octocrab = "0.31.2"
itertools = "0.11.0"
