[package]
name = "waybar-extensions-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "waybar_extensions"
path = "src/lib/lib.rs"

[dependencies]
serde={ version = "1.0", features = ["derive"] }
serde_json="1.0"
reqwest={ version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
systemctl = "0.4.0"
chrono = "0.4"
toml = "0.8"
xdg = "2.5"
futures = "0.3"
notify-rust = "4.11"
git2 = "0.19"
octocrab = "0.41.1"
itertools = "0.13.0"
